# agentic-pcb-design-assistant

./: README.md  pyproject.toml
config/: coupled_microstrip_config.yaml
config/agent_config/: coupled_microstrip_agent.yaml
config/tool_config/: bem_field_solver_simulator.yaml  coupled_microstrip_parameter_optimizer.yaml
docs/: mkdocs.yml
outputs/: README.md
src/agents/: coupled_microstrip_agent.py  data_models.py  health.py  llm_model.py  mcp_server_builder.py  memory_manager.py  pcb_agent.py  settings.py  si_agent.py  tool_registry.py  workflow.py
src/agents/config/: config.yaml  settings.py
src/core/: data_models.py  input.py  memory_manager.py  message_builder.py  pcb_agent.py  settings.py  tool_registry.py
src/models/: coupled_microstrip_impedance_predicor_ann.onnx
src/tools/: bem_field_solver_simulator.py  coupled_microstrip_parameter_optimizer_tool.py
